Kotlin compatability improvements.